# gigno_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/configs/: default.cfg
assets/maps/: bowling.map  demo_01.map  demo_02.map  demo_03.map  demo_04.map  demo_05.map
assets/shaders/: compile_shaders.bat  compile_shaders_debug.bat  quad.vert  shadow_map.vert  shadowmap_blur_horizontal.frag  shadowmap_blur_vertical.frag  simple_shader.frag  simple_shader.vert  varianced_shadow_map.frag
mapping/: README.txt  bowling.map  controller_testing.map  test_trenchbroom.map
mapping/autosave/: bowling.1.map  bowling.2.map  bowling.3.map  bowling.4.map  bowling.5.map  bowling.6.map  bowling.7.map  bowling.8.map
mapping/trenchbroom_config/: GameConfig.cfg  gigno.fgd
maps/: demo_01.map  demo_02.map  demo_03.map  demo_04.map  demo_05.map
misc/: GJK and EPA resources.txt  benchmark_octree.txt  benchmark_test.txt  collision_response.txt  collision_response_note_1_determminer-la-part-de-l'impulsion.txt  further_optimisation.txt  it.txt  physics_log.txt  style_guideline.txt  test_trenchbroom.map
misc/physics_screenshots/: 001.txt  002~.txt
misc/test_trenchbroom/: test_trenchbroom.gmap
models/: credits.txt
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/: application.cpp  application.h  core_macros.h  error_macros.h  features_usage.h  main.cpp  stringify.h  test_entity.h
src/algorithm/: arena.cpp  arena.h  geometry.cpp  geometry.h  my_cstr.h  string_buffer.cpp  string_buffer.h
src/audio/: audio_server.cpp  audio_server.h  volume_command.cpp
src/debug/: command.cpp  command.h  command_token.cpp  command_token.h  console.cpp  console.h  debug_server.cpp  debug_server.h
src/entities/: camera.cpp  camera.h  dome_camera.cpp  dome_camera.h  entity.cpp  entity.h  entity_server.cpp  entity_server.h  fp_controller.cpp  fp_controller.h  keyvalue.cpp  keyvalue.h  map_parser.cpp  map_parser.h  rendered_entity.cpp  rendered_entity.h  serialization.cpp  serialization.h  spinner.h  target.cpp  target.h  world_spawn.cpp  world_spawn.h
src/gameplay/: dome_camera.h  fp_controller.cpp  fp_controller.h  player.cpp  player.h  spinner.cpp  spinner.h
src/input/: input_server.cpp  input_server.h  keys.h
src/physics/: collider.cpp  collider.h  collider_type.h  collision.cpp  collision.h  collision_sound.cpp  collision_sound.h  constraints.cpp  (+13 more)
tools/giap/: CMakeLists.txt  README.md
tools/giap/src/: main.cpp
(+97 files in other folders)
